--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "parcel",
     "watch": "parcel watch",
-    "build": "parcel build",
+    "build": "parcel build  --public-url ./",
     "server": "node server.js"
   },
   "author": "",
