--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "parcel": "^2.2.1"
   }
 }
