--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@parcel/transformer-react-refresh-wrap": "^2.2.1",
     "express": "^4.17.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.2.1",
-    "react-router-dom": "^6.2.1",
-    "typescript": "^4.5.5"
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
+    "@parcel/transformer-react-refresh-wrap": "^2.2.1",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "parcel": "^2.2.1"
+    "parcel": "^2.2.1",
+    "typescript": "^4.5.5"
   }
 }
