--- a/.proxyrc.json
+++ b/.proxyrc.json
@@ -1,5 +1,11 @@
 {
   "/api/posts": {
     "target": "http://localhost:3000/"
+  },
+  "/create-post": {
+    "target": "http://localhost:3000/"
+  },
+  "/uploads/blog-logo": {
+    "target": "http://localhost:3000/"
   }
 }
