--- a/package.json
+++ b/package.json
@@ -13,7 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@editorjs/editorjs": "^2.22.2",
+    "@editorjs/embed": "^2.5.0",
+    "@editorjs/header": "^2.6.2",
+    "@editorjs/image": "^2.6.2",
+    "@editorjs/quote": "^2.4.0",
+    "@editorjs/table": "^2.0.1",
+    "body-parser": "^1.19.1",
     "express": "^4.17.2",
+    "multer": "^1.4.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.2.1",
@@ -21,6 +29,7 @@
   },
   "devDependencies": {
     "@parcel/transformer-react-refresh-wrap": "^2.2.1",
+    "@types/editorjs__header": "^2.6.0",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "parcel": "^2.2.1",
