--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "blog",
   "version": "1.0.0",
   "description": "",
-  "source": "./src/index.html",
+  "source": "dist/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "parcel",
-    "watch": "parcel watch",
-    "build": "parcel build  --public-url ./",
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "start": "webpack serve --open",
     "server": "node server.js"
   },
   "author": "",
@@ -32,7 +32,14 @@
     "@types/editorjs__header": "^2.6.0",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "parcel": "^2.2.1",
-    "typescript": "^4.5.5"
+    "css-loader": "^6.6.0",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.5.3",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.5",
+    "webpack": "^5.68.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-middleware": "^5.3.1",
+    "webpack-dev-server": "^4.7.4"
   }
 }
