--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@editorjs/quote": "^2.4.0",
     "@editorjs/table": "^2.0.1",
     "body-parser": "^1.19.1",
+    "editorjs-react-renderer": "^3.0.1",
     "express": "^4.17.2",
     "multer": "^1.4.4",
     "react": "^17.0.2",
