--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@bomdi/codebox": "^1.0.12",
+    "@editorjs/checklist": "^1.3.0",
+    "@editorjs/delimiter": "^1.2.0",
     "@editorjs/editorjs": "^2.22.2",
     "@editorjs/embed": "^2.5.0",
     "@editorjs/header": "^2.6.2",
     "@editorjs/image": "^2.6.2",
+    "@editorjs/list": "^1.6.2",
     "@editorjs/quote": "^2.4.0",
     "@editorjs/table": "^2.0.1",
+    "@editorjs/warning": "^1.2.0",
     "body-parser": "^1.19.1",
     "editorjs-react-renderer": "^3.0.1",
     "express": "^4.17.2",
